<resources>
    <string name="app_name">wifi-example</string>
    <string name="enter_ssid">Enter SSID</string>
    <string name="verify">Verify</string>
    <string name="console_n_n_wifi_verification_not_done_yet"><![CDATA[#### [ Console ] ####\n\n> WiFi verification not done yet.]]></string>
    <string name="check_wifi_network">Check Wifi Network</string>
    <string name="scan_wifi_network">Scan Wifi Network</string>
    <string name="scan_not_started_yet">Scan not started yet</string>
    <string name="scanning_for_wifi_networks">Scanning for wifi-networks…</string>
    <string name="scan_stopped">Scan stopped</string>
    <string name="start_scan">Start Scan</string>
    <string name="check_permission">Check Location Permission</string>
</resources>