<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_permission"
        android:id="@+id/checkPermissionButton"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/checkWifiButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_wifi_network"
        android:id="@+id/checkWifiButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_wifi_network"
        android:id="@+id/scanWifiButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/checkWifiButton"
        />

</RelativeLayout>